# maze_and_rat

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: maze.py
core/: __init__.py  maze.py  pathfinder.py
static/: app.js  index.html  style.css
tests/: test_api.py  test_maze.py  test_pathfinder.py
